<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context="com.example.usuario.datosejercicios1.Main2Activity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_la_direccion_web"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/rgURL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbtnBlanck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/rbtnHTTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/http"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/rbtnHTTPS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/https"
                        android:checked="false"
                        />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/edtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="www.google.es"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</RelativeLayout>
